[package]
name = "xplm_shared_object"
version = "0.1.0"
authors = ["Sam Crow <samcrow@uw.edu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/samcrow/rust-xplm-shared-object"
keywords = ["X-Plane", "plugin"]
description = "Inter-plugin shared data for X-Plane plugins"

[dependencies]
xplm = { git = "https://github.com/samcrow/rust-xplm.git" }
serde = "0.7"
serde_json = "0.7"
